--- a/src/Cake.Issues.PullRequests.AzureDevOps.Tests/Cake.Issues.PullRequests.AzureDevOps.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.AzureDevOps.Tests/Cake.Issues.PullRequests.AzureDevOps.Tests.csproj
@@ -16,9 +16,9 @@
 
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.33.0" />
-    <PackageReference Include="Cake.Issues" Version="0.7.0" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="0.7.0" />
-    <PackageReference Include="Cake.Issues.Testing" Version="0.7.0" />
+    <PackageReference Include="Cake.Issues" Version="0.8.0-beta0001" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="0.8.0-beta0001" />
+    <PackageReference Include="Cake.Issues.Testing" Version="0.8.0-beta0001" />
     <PackageReference Include="Cake.Testing" Version="0.33.0" />
     <PackageReference Include="Cake.AzureDevOps" Version="0.4.0-beta0001" />
     <PackageReference Include="NSubstitute" Version="4.2.1" />
