--- a/src/Cake.Issues.PullRequests.AzureDevOps/Cake.Issues.PullRequests.AzureDevOps.csproj
+++ b/src/Cake.Issues.PullRequests.AzureDevOps/Cake.Issues.PullRequests.AzureDevOps.csproj
@@ -43,8 +43,8 @@ See the Project Site for an overview of the whole ecosystem of addins for workin
 
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.33.0" PrivateAssets="All" />
-    <PackageReference Include="Cake.Issues" Version="0.7.0" PrivateAssets="All" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="0.7.0" PrivateAssets="All" />
+    <PackageReference Include="Cake.Issues" Version="0.8.0-beta0001" PrivateAssets="All" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="0.8.0-beta0001" PrivateAssets="All" />
     <PackageReference Include="Cake.AzureDevOps" Version="0.4.0-beta0001" PrivateAssets="All" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6" PrivateAssets="All" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
