--- a/src/Cake.Issues.PullRequests.AzureDevOps/Cake.Issues.PullRequests.AzureDevOps.csproj
+++ b/src/Cake.Issues.PullRequests.AzureDevOps/Cake.Issues.PullRequests.AzureDevOps.csproj
@@ -44,8 +44,8 @@ See the Project Site for an overview of the whole ecosystem of addins for workin
 
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="1.0.0" PrivateAssets="All" />
-    <PackageReference Include="Cake.Issues" Version="0.9.0" PrivateAssets="All" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="0.9.0" PrivateAssets="All" />
+    <PackageReference Include="Cake.Issues" Version="1.0.0-beta0001" PrivateAssets="All" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="1.0.0-beta0001" PrivateAssets="All" />
     <PackageReference Include="Cake.AzureDevOps" Version="0.5.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
       <PrivateAssets>all</PrivateAssets>
