--- a/src/Cake.Issues.PullRequests.AzureDevOps.Tests/Cake.Issues.PullRequests.AzureDevOps.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.AzureDevOps.Tests/Cake.Issues.PullRequests.AzureDevOps.Tests.csproj
@@ -15,9 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cake.Issues" Version="1.0.0-beta0001" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="1.0.0-beta0001" />
-    <PackageReference Include="Cake.Issues.Testing" Version="1.0.0-beta0001" />
+    <PackageReference Include="Cake.Issues" Version="1.0.0" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="1.0.0" />
+    <PackageReference Include="Cake.Issues.Testing" Version="1.0.0" />
     <PackageReference Include="Cake.Testing" Version="1.0.0" />
     <PackageReference Include="Cake.AzureDevOps" Version="1.0.0" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
