--- a/src/Cake.Issues.PullRequests.AzureDevOps.Tests/Cake.Issues.PullRequests.AzureDevOps.Tests.csproj
+++ b/src/Cake.Issues.PullRequests.AzureDevOps.Tests/Cake.Issues.PullRequests.AzureDevOps.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <Product>Cake.Issues.PullRequests.AzureDevOps</Product>
     <Copyright>Copyright © BBT Software AG and contributors</Copyright>
@@ -15,11 +15,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cake.Issues" Version="1.0.0" />
-    <PackageReference Include="Cake.Issues.PullRequests" Version="1.0.0" />
-    <PackageReference Include="Cake.Issues.Testing" Version="1.0.0" />
-    <PackageReference Include="Cake.Testing" Version="1.0.0" />
-    <PackageReference Include="Cake.AzureDevOps" Version="1.0.0" />
+    <PackageReference Include="Cake.Issues" Version="2.0.0-beta0001" />
+    <PackageReference Include="Cake.Issues.PullRequests" Version="2.0.0-beta0001" />
+    <PackageReference Include="Cake.Issues.Testing" Version="2.0.0-beta0001" />
+    <PackageReference Include="Cake.Testing" Version="2.0.0" />
+    <PackageReference Include="Cake.AzureDevOps" Version="2.0.0-beta0001" />
     <PackageReference Include="NSubstitute" Version="4.2.2" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
