--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,9 @@ jobs:
   pool:
     vmImage: 'windows-2022'
   steps:
+  - task: UseDotNet@2
+    inputs:
+      version: '2.1.x'
   - powershell: |
       $ENV:CAKE_SKIP_GITVERSION=([string]::IsNullOrEmpty($ENV:SYSTEM_PULLREQUEST_PULLREQUESTID) -eq $False).ToString()
       .\build.ps1
@@ -56,6 +59,9 @@ jobs:
   - task: UseDotNet@2
     inputs:
       version: '3.x'
+  - task: UseDotNet@2
+    inputs:
+      version: '2.1.x'
   - bash: |
       ./build.sh --verbosity=diagnostic
     displayName: 'Cake Build'
