--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,16 @@ jobs:
   pool:
     vmImage: 'windows-2022'
   steps:
+  # .NET 5 required for GitVersion
+  - task: UseDotNet@2
+    inputs:
+      version: '5.x'
+  - task: UseDotNet@2
+    inputs:
+      version: '6.x'
+  - task: UseDotNet@2
+    inputs:
+      version: '7.x'
   - powershell: |
       $ENV:CAKE_SKIP_GITVERSION=([string]::IsNullOrEmpty($ENV:SYSTEM_PULLREQUEST_PULLREQUESTID) -eq $False).ToString()
       .\build.ps1
@@ -24,15 +34,16 @@ jobs:
   pool:
     vmImage: 'macOS-10.15'
   steps:
-  - task: UseDotNet@2
-    inputs:
-      version: '6.x'
+  # .NET 5 required for GitVersion
   - task: UseDotNet@2
     inputs:
       version: '5.x'
   - task: UseDotNet@2
     inputs:
-      version: '3.x'
+      version: '6.x'
+  - task: UseDotNet@2
+    inputs:
+      version: '7.x'
   - bash: |
       ./build.sh
     displayName: 'Cake Build'
@@ -41,15 +52,16 @@ jobs:
   pool:
     vmImage: 'ubuntu-18.04'
   steps:
-  - task: UseDotNet@2
-    inputs:
-      version: '6.x'
+  # .NET 5 required for GitVersion
   - task: UseDotNet@2
     inputs:
       version: '5.x'
   - task: UseDotNet@2
     inputs:
-      version: '3.x'
+      version: '6.x'
+  - task: UseDotNet@2
+    inputs:
+      version: '7.x'
   - bash: |
       ./build.sh --verbosity=diagnostic
     displayName: 'Cake Build'
